--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -2,27 +2,43 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My First Portfolio Page</title>
+  <title>My Portfolio Homepage</title>
 </head>
 <body>
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
 
-  <h1>Welcome to My First Portfolio</h1>
+  <main>
+    <article>
+      <h1>Welcome to My First Portfolio Page</h1>
+      <p>This is my very first webpage created using HTML. It's simple, but it's the foundation of everything I'll be building.</p>
 
-  <p>This is a practice page for my ALX web development project.</p>
+      <h2>Why I’m Learning Web Development</h2>
+      <p>I want to become a great developer. Learning HTML is the first step toward building beautiful and functional websites.</p>
 
-  <h2>What I’m Learning</h2>
+      <h3>What I’ve Learned So Far</h3>
+      <p>I've learned about HTML tags, the structure of a webpage, and how to add headings, paragraphs, and images.</p>
 
-  <p>I'm learning how to structure websites using HTML and CSS.</p>
+      <p>Stay tuned — more content and exciting features are coming soon to this portfolio!</p>
 
-  <h3>My Progress So Far</h3>
+      <a href="https://www.alxafrica.com" target="_blank">
+        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="Clickable ALX Logo" width="200">
+      </a>
 
-  <p>I now understand how to use headings, paragraphs, and images.</p>
+      <p><a href="tweets.html">Check out my favorite tweet</a></p>
+    </article>
 
-  <p>Stay tuned! More exciting updates are on the way.</p>
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
 
-  <a href="https://www.alxafrica.com" target="_blank">
-    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
-  </a>
-
+  <footer>
+    <p>Made by Bismark Asare - <a href="https://github.com/Ohms-Gh" target="_blank">here</a></p>
+  </footer>
 </body>
 </html>
