--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -5,15 +5,34 @@
   <title>My Embedded Tweet</title>
 </head>
 <body>
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
 
-  <h1>Check Out This Tweet</h1>
-  <blockquote class="twitter-tweet">
-    <p lang="en" dir="ltr">HTML is the foundation of every website on the internet. Learn it well. 💻</p>
-    &mdash; Web Dev Tips (@WebDevTips) 
-    <a href="https://twitter.com/WebDevTips/status/1368604565644134403">March 7, 2021</a>
-  </blockquote> 
-  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-  <p><a href="index.html">← Back to Home</a></p>
+  <main>
+    <article>
+      <h1>Check Out This Tweet</h1>
 
+      <blockquote class="twitter-tweet">
+        <p lang="en" dir="ltr">HTML is the foundation of every website on the internet. Learn it well. 💻</p>
+        &mdash; Web Dev Tips (@WebDevTips)
+        <a href="https://twitter.com/WebDevTips/status/1368604565644134403">March 7, 2021</a>
+      </blockquote>
+      <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+      <p><a href="index.html">← Back to Home</a></p>
+    </article>
+
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
+
+  <footer>
+    <p>Made by Bismark Asare - <a href="https://github.com/Ohms-Gh" target="_blank">here</a></p>
+  </footer>
 </body>
 </html>
