--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -11,7 +11,6 @@
       <li><a href="tweets.html">Tweets</a></li>
     </ul>
   </header>
-
   <main>
     <article>
       <h1>Welcome to My First Portfolio Page</h1>
@@ -30,13 +29,43 @@
       </a>
 
       <p><a href="tweets.html">Check out my favorite tweet</a></p>
+            <h2>Learners Information</h2>
+      <table border="1">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Age</th>
+            <th>Country</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>John</td>
+            <td>25</td>
+            <td>USA</td>
+          </tr>
+          <tr>
+            <td>Emily</td>
+            <td>28</td>
+            <td>Canada</td>
+          </tr>
+          <tr>
+            <td>Michael</td>
+            <td>32</td>
+            <td>Australia</td>
+          </tr>
+          <tr>
+            <td>Sophia</td>
+            <td>21</td>
+            <td>UK</td>
+          </tr>
+        </tbody>
+      </table>
     </article>
-
     <aside>
       <p>placeholder to add comment thread later</p>
     </aside>
   </main>
-
   <footer>
     <p>Made by Bismark Asare - <a href="https://github.com/Ohms-Gh" target="_blank">here</a></p>
   </footer>
